--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ p {
 div.exercice {
     counter-increment: counterExo;
     width: 666px;
-    margin: auto;
+    margin: 5px auto;
     border: 1px solid blue;
     padding: 5px;
 }
