--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ div.main {
 div.algo {
     width: 650px;
     max-width: 95%;
-    margin: auto;
+    margin: 5px auto;
     border: 1px solid gray;
     padding: 5px;
     position: relative;
