--- a/style.css
+++ b/style.css
@@ -46,6 +46,14 @@ div.exercice:before {
     white-space: pre;
 }
 
+div.danger {
+    width: 650px;
+    margin: 5px auto;
+    border: 1px solid red;
+    background-color: #FEE7F0;
+    padding: 5px;
+}
+
 table {
     border-collapse: collapse;
     table-layout: fixed;
