--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ div.exercice {
     margin: 5px auto;
     border: 1px solid blue;
     padding: 5px;
+    text-align: justify;
 }
 
 div.exercice:before {
@@ -58,6 +59,13 @@ table {
     border-collapse: collapse;
     table-layout: fixed;
     width: 100%;
+}
+
+table.etroite {
+    border-collapse: collapse;
+    table-layout: fixed;
+    width: 650px;
+    margin: auto;
 }
 
 th, td {
